Arch: Purge MPMC False Sharing, inject VarHandles, and fix GPU tests